[metadata]
name = pymonkey
description = A Python interpreter for the monkey language from the book Writing An Interpreter In Go by Thorsten Ball 
author = Dennis Lönard
license = MIT
license_files = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = pymonkey
install_requires =
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    flake8==6.0.0
    pytest==7.3.1
    pytest-cov==4.0.0
    mypy==1.2.0

[flake8]
max-line-length = 120
exclude =
    .git*
    venv
